fixing layout issues with more users

--- a/public/stylesheets/css.css
+++ b/public/stylesheets/css.css
@@ -103,7 +103,9 @@ header h1 a { display: block; width: 300px; height: 38px;}
 
 .ordered { background-color: yellow; }
 
-ul#users li { float: left; margin-right: 15px; text-align:center; width:90px;}
+ul#users { width: 685px; }
+
+ul#users li { float: left; margin-right: 15px; text-align:center; width:99px;}
 
 nav#laboratory {
 	margin-top: 25px;
